DP-410 add new route to get delegate candidate user information by phoneNumber
